# serde_hash

./: Cargo.toml  LICENSE  README.MD
examples/: basic.rs  deserialize.rs  generate_salt.rs  original.rs  vectors.rs
serde_hash/: Cargo.toml  README.MD
serde_hash/src/: lib.rs  serde_impl.rs
serde_hash/tests/: test_serialization.rs
serde_hash_derive/: Cargo.toml  README.MD
serde_hash_derive/src/: lib.rs
serde_hash_impl/: Cargo.toml
serde_hash_impl/src/: hashids.rs  lib.rs  macros.rs  salt.rs
