[package]
name = "serde_hash"
version = "0.1.0"
edition = "2024"

[dependencies]
serde_hash_derive = { path = "../serde_hash_derive" }
serde_hash_impl = { path = "../serde_hash_impl" }

[[example]]
name = "basic"
path = "../examples/basic.rs"

[[example]]
name = "generate_salt"
path = "../examples/generate_salt.rs"
[[example]]
name = "deserialize"
path = "../examples/deserialize.rs"
[[example]]
name = "vectors"
path = "../examples/vectors.rs"
[[example]]
name = "original"
path = "../examples/original.rs"


[dev-dependencies]
serde_json = { version = "1.0.140" }
serde = { version = ">=1", features = ["derive"] }
