[package]
name = "serde_hash"
version = "0.2.0"
edition = "2024"
readme = "README.MD"
authors = ["Drew Chase"]
description = "A Rust library for seamlessly integrating HashIds with Serde serialization and deserialization. This library provides a convenient way to obfuscate numeric IDs in your JSON output without changing your application's internal data structures."
license-file = "../LICENSE"
repository = "https://github.com/Drew-Chase/serde_hash"

[dependencies]
serde_hash_derive = { path = "../serde_hash_derive", version = "0.2" }
serde = { version = "1.0.228", features = ["derive"] }
rand = { version = "0.9.0" }
log = "0.4.29"
hash-ids = "0.3.1"
anyhow = "1.0.101"

[[example]]
name = "basic"
path = "../examples/basic.rs"
[[example]]
name = "generate_salt"
path = "../examples/generate_salt.rs"
[[example]]
name = "deserialize"
path = "../examples/deserialize.rs"
[[example]]
name = "vectors"
path = "../examples/vectors.rs"
[[example]]
name = "original"
path = "../examples/original.rs"


[dev-dependencies]
serde_json = { version = "1.0.140" }
